fixed alignment issue

--- a/apps/mobile/src/components/Sidebar/Sidebar.css
+++ b/apps/mobile/src/components/Sidebar/Sidebar.css
@@ -7,7 +7,7 @@
 .sidebar_icon {
   position: fixed;
   right: 0;
-  top: 0.625rem;
+  top: 0.9rem;
   color: white;
   width: 50px;
   height: 50px;
